# Obsidian

./: .gitignore  README.md  cli.py  main.py  obsidian.py  pyproject.toml  requirements.txt  setup_db.py
core/: corruption.py  engine.py  entropy.py  heuristics.py  learner.py  signatures.py
database/: init_db.py
gui/: admin_gui.py  advanced_gui.py  batch_scan_gui.py  launcher.py
src/Obsidian/: cli.py  main.py
src/Obsidian/core/: crypto.py  engine.py  entropy.py  heuristics.py  signatures.py  strings.py
src/Obsidian/database/: magic.db
src/Obsidian/database/src/Obsidian/database/: magic.db
src/Obsidian/utils/: exporter.py  file_reader.py
src/obsidian.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_engine.py
utils/: exporter.py  file_reader.py  hashing.py
